# ai_engineer_assignment_2026

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup-venv.sh
app/: main.py  observability.py  utils.py
app/agents/: deep_agent_workflow.py  orchestrator.py  reporting.py  synthesizer.py  tools.py  worker.py  workflow.py
app/agents/prompts/: deep_agent_system_prompt.md  deep_agent_user_message.jinja2
app/api/: dependencies.py  endpoints.py
app/config/: base.yaml  development.yaml  production.yaml  settings.py
app/models/: database.py  schemas.py
app/services/: memory_service.py  semaphore_manager.py  workflow_service.py
app/services/evaluation/: strategy.py  strategy_factory.py
app/services/evaluation/strategies/: multimodal_openai_critic.py
app/services/image_editing/: editor.py  parameters.py  strategy.py  strategy_factory.py
app/services/image_editing/strategies/: gemini.py  klein.py  mock.py
app/services/llm/: strategy.py  strategy_factory.py
examples/: deep_agent_workflow_example.py  evaluate_variant_example.py  execute_edit_example.py  gemini_example.py  klein_example.py
frontend/: README.md  app.py  database.py
frontend/.streamlit/: secrets.docker.toml  secrets.toml  secrets.toml.example
tests/: __init__.py  test-batch-and-monitor.sh  test-endpoint.sh  test-job-results.sh  test-single-process.sh  test_deep_agent_workflow.py  test_workflow.py  test_workflow_service.py
(+1 files in other folders)
