[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-engineer-assignment"
version = "0.1.0"
description = "AI Engineer Assignment - Image Editing Workflow"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.optional-dependencies]
testing = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
